--- a/Journal/Journal/Resources/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Resources/Base.lproj/Main.storyboard
@@ -23,7 +23,7 @@
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="60"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Emn-Ej-zjE">
+                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" alignment="top" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="tEG-O9-Py1">
                                             <rect key="frame" x="10" y="5" width="90" height="50"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UlS-oR-2WU">
@@ -32,11 +32,8 @@
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="au5-ti-9Fd">
-                                                    <rect key="frame" x="0.0" y="31.5" width="90" height="18.5"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="18.5" id="rvG-aG-2Oj"/>
-                                                    </constraints>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="au5-ti-9Fd">
+                                                    <rect key="frame" x="0.0" y="26.5" width="90" height="23.5"/>
                                                     <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -51,13 +48,11 @@
                                         </label>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="ztU-OQ-xGQ" firstAttribute="leading" secondItem="Emn-Ej-zjE" secondAttribute="trailing" constant="242.5" id="2RK-zZ-Rz1"/>
-                                        <constraint firstAttribute="trailing" secondItem="ztU-OQ-xGQ" secondAttribute="trailing" constant="10" id="9ZG-hO-ehP"/>
-                                        <constraint firstAttribute="bottom" secondItem="Emn-Ej-zjE" secondAttribute="bottom" constant="5" id="M8Q-Jy-McV"/>
-                                        <constraint firstItem="Emn-Ej-zjE" firstAttribute="top" secondItem="F4F-Uk-p1D" secondAttribute="top" constant="5" id="WQN-4k-Lfw"/>
-                                        <constraint firstItem="Emn-Ej-zjE" firstAttribute="leading" secondItem="F4F-Uk-p1D" secondAttribute="leading" constant="10" id="hFe-zi-pKz"/>
-                                        <constraint firstItem="ztU-OQ-xGQ" firstAttribute="top" secondItem="F4F-Uk-p1D" secondAttribute="top" constant="5" id="lU2-Hk-PEp"/>
-                                        <constraint firstAttribute="bottom" secondItem="ztU-OQ-xGQ" secondAttribute="bottom" constant="40" id="vpK-43-CkA"/>
+                                        <constraint firstItem="tEG-O9-Py1" firstAttribute="leading" secondItem="F4F-Uk-p1D" secondAttribute="leading" constant="10" id="2oM-jO-Wfd"/>
+                                        <constraint firstAttribute="bottom" secondItem="ztU-OQ-xGQ" secondAttribute="bottom" constant="40" id="90D-fm-c8G"/>
+                                        <constraint firstItem="tEG-O9-Py1" firstAttribute="centerY" secondItem="F4F-Uk-p1D" secondAttribute="centerY" id="V2f-jY-LBG"/>
+                                        <constraint firstItem="ztU-OQ-xGQ" firstAttribute="top" secondItem="F4F-Uk-p1D" secondAttribute="top" constant="5" id="e0M-9B-JPF"/>
+                                        <constraint firstAttribute="trailing" secondItem="ztU-OQ-xGQ" secondAttribute="trailing" constant="10" id="f0J-5v-tj6"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
@@ -85,7 +80,7 @@
             </objects>
             <point key="canvasLocation" x="984.05797101449286" y="124.55357142857142"/>
         </scene>
-        <!--Create Entry-->
+        <!--Entry-->
         <scene sceneID="igQ-Iv-7dw">
             <objects>
                 <viewController id="NdL-ph-Q3F" customClass="EntryDetailViewController" customModule="Journal" customModuleProvider="target" sceneMemberID="viewController">
@@ -97,12 +92,12 @@
                                 <rect key="frame" x="20" y="141" width="374" height="435"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="33D-xn-0GY">
-                                        <rect key="frame" x="0.0" y="0.0" width="374" height="252"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="374" height="34"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Ytv-Jr-zCC">
-                                        <rect key="frame" x="0.0" y="262" width="374" height="173"/>
+                                        <rect key="frame" x="0.0" y="44" width="374" height="391"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                         <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                         <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -121,7 +116,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="VhP-4z-J3E"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Create Entry" id="wdF-Hl-JId">
+                    <navigationItem key="navigationItem" title="Entry" id="wdF-Hl-JId">
                         <barButtonItem key="rightBarButtonItem" systemItem="save" id="BiS-h3-5Fl">
                             <connections>
                                 <action selector="saveBtnPressed:" destination="NdL-ph-Q3F" id="1kl-iE-voQ"/>
@@ -157,6 +152,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="oM8-5u-AlV"/>
+        <segue reference="m4P-6a-FxX"/>
     </inferredMetricsTieBreakers>
 </document>
