--- a/Journal (Core Data)/Journal (Core Data)/Base.lproj/Main.storyboard
+++ b/Journal (Core Data)/Journal (Core Data)/Base.lproj/Main.storyboard
@@ -88,31 +88,41 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter a title:" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="93p-RH-fQf">
-                                <rect key="frame" x="16" y="156" width="343" height="34"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="3Yk-IJ-JOE">
-                                <rect key="frame" x="16" y="206" width="343" height="300"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" priority="750" constant="300" id="Kqa-XO-Nun"/>
-                                </constraints>
-                                <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                            </textView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="MzV-EI-GZL">
+                                <rect key="frame" x="16" y="156" width="343" height="397"/>
+                                <subviews>
+                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="1" translatesAutoresizingMaskIntoConstraints="NO" id="7Jp-GG-Irf">
+                                        <rect key="frame" x="0.0" y="0.0" width="343" height="32"/>
+                                        <segments>
+                                            <segment title="☹️"/>
+                                            <segment title="😐"/>
+                                            <segment title="🙂"/>
+                                        </segments>
+                                    </segmentedControl>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter a title:" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="93p-RH-fQf">
+                                        <rect key="frame" x="0.0" y="47" width="343" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="3Yk-IJ-JOE">
+                                        <rect key="frame" x="0.0" y="97" width="343" height="300"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" priority="750" constant="300" id="Kqa-XO-Nun"/>
+                                        </constraints>
+                                        <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                    </textView>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" red="0.92156862750000001" green="0.92156862750000001" blue="0.92156862750000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="93p-RH-fQf" firstAttribute="top" secondItem="Z1v-ye-McU" secondAttribute="top" constant="16" id="FWP-8k-zE7"/>
-                            <constraint firstItem="93p-RH-fQf" firstAttribute="leading" secondItem="Z1v-ye-McU" secondAttribute="leading" constant="16" id="NYZ-kI-m3i"/>
-                            <constraint firstItem="3Yk-IJ-JOE" firstAttribute="top" secondItem="93p-RH-fQf" secondAttribute="bottom" constant="16" id="RuP-7D-Km5"/>
-                            <constraint firstItem="3Yk-IJ-JOE" firstAttribute="leading" secondItem="Z1v-ye-McU" secondAttribute="leading" constant="16" id="ScH-OL-iBT"/>
-                            <constraint firstItem="Z1v-ye-McU" firstAttribute="trailing" secondItem="3Yk-IJ-JOE" secondAttribute="trailing" constant="16" id="Y5p-ng-94H"/>
-                            <constraint firstItem="Z1v-ye-McU" firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="3Yk-IJ-JOE" secondAttribute="bottom" constant="16" id="b6v-nj-zJN"/>
-                            <constraint firstItem="Z1v-ye-McU" firstAttribute="trailing" secondItem="93p-RH-fQf" secondAttribute="trailing" constant="16" id="mkd-fz-vdx"/>
+                            <constraint firstItem="MzV-EI-GZL" firstAttribute="top" secondItem="Z1v-ye-McU" secondAttribute="top" constant="16" id="0Ba-hm-iIQ"/>
+                            <constraint firstItem="MzV-EI-GZL" firstAttribute="leading" secondItem="Z1v-ye-McU" secondAttribute="leading" constant="16" id="m5A-2a-T31"/>
+                            <constraint firstItem="Z1v-ye-McU" firstAttribute="trailing" secondItem="MzV-EI-GZL" secondAttribute="trailing" constant="16" id="nS6-WO-lcm"/>
+                            <constraint firstItem="Z1v-ye-McU" firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="MzV-EI-GZL" secondAttribute="bottom" constant="16" id="yev-EP-jW6"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Z1v-ye-McU"/>
                     </view>
@@ -125,6 +135,7 @@
                     </navigationItem>
                     <connections>
                         <outlet property="bodyTextView" destination="3Yk-IJ-JOE" id="JWT-dp-MRS"/>
+                        <outlet property="moodSegmentedControl" destination="7Jp-GG-Irf" id="HLv-Wh-8pp"/>
                         <outlet property="titleTextField" destination="93p-RH-fQf" id="ffl-0G-2pT"/>
                     </connections>
                 </viewController>
@@ -152,6 +163,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="kBv-Us-aXE"/>
+        <segue reference="lbh-Ua-Ehf"/>
     </inferredMetricsTieBreakers>
 </document>
